<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_medium"
        android:text="@string/menu"
        android:layout_marginBottom="40dp"
        android:textColor="@color/btn_color"
        android:textSize="42sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_keep_going"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginVertical="6dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/oswald_medium"
        android:text="@string/keep_going"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_game"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginVertical="6dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/oswald_medium"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_how_to_play"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginVertical="6dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/oswald_medium"
        android:text="@string/how_to_play"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


</LinearLayout>